# medgemma-mcp

./: .gitignore  CLAUDE.md  COT_PROMPT_TEMPLATES.md  IMPLEMENTATION_PLAN.md  README.md  pyproject.toml
examples/: claude_desktop_config.json
notebooks/: medgemma_mcp.ipynb
scripts/: smoke_test.py
src/medgemma_mcp/: __init__.py  __main__.py  server.py
src/medgemma_mcp/model/: __init__.py  inference.py  loader.py
src/medgemma_mcp/preprocessing/: __init__.py  dicom.py  fhir.py  images.py
src/medgemma_mcp/prompts/: __init__.py  templates.py
src/medgemma_mcp/safety/: __init__.py  confidence.py  disclaimers.py
src/medgemma_mcp/tools/: __init__.py  analyze_image.py  extract.py  medical_reason.py  summarize_fhir.py
tests/: conftest.py  test_confidence.py  test_extraction.py  test_fhir.py  test_preprocessing.py  test_prompts.py
